@@ -1,3 +1,8 @@
+2010-11-19  Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Source/NSRegularExpression.m: Rearrange for non-C99 compliant
+        compilers.
+
 2010-11-18  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSPredicate.m: Fixup use of preprocessor constants.
